--- a/web/src/app/routes/guild/guild.component.sass
+++ b/web/src/app/routes/guild/guild.component.sass
@@ -100,6 +100,13 @@
         background-image: url('/assets/close.svg')
         background-size: contain
 
+
+.add-permission
+    background-color: $c-nqblack
+    padding: 10px
+    border-radius: 5px
+
+
 @media only screen and (max-width: 700px)
     #user-info
         height: fit-content
