--- a/web/src/styles.sass
+++ b/web/src/styles.sass
@@ -88,3 +88,7 @@ select
 
 .disallowed
     background-color: transparentize($c-red, .4)
+
+.link
+    color: $c-blurple !important
+    text-decoration: underline !important
