--- a/web/src/app/routes/member/member.component.sass
+++ b/web/src/app/routes/member/member.component.sass
@@ -23,7 +23,7 @@ ul
         font-size: 14px
 
 
-#general-user-info
+.general-user-info
     th
         padding-right: 50px
         vertical-align: baseline
@@ -53,3 +53,17 @@ ul
     font-size: 13px
     padding: 2px 4px
     margin: 0px 5px 5px 0px
+
+.mod-buttons
+    margin-top: 10px
+
+    button
+        margin-right: 10px
+        padding: 5px 30px
+
+.rep-reason
+    width: 100%
+    height: 100px
+    background-color: rgba(0, 0, 0, .4)
+    color: white
+    
