--- a/web/src/sass/vars.sass
+++ b/web/src/sass/vars.sass
@@ -4,6 +4,7 @@ $c-greyple: #99AAB5
 $c-darkbnb: #2C2F33
 $c-nqblack: #23272A
 $c-red:     #e53935
+$c-orange:  #F57C00
 $c-green:   #43A047
 
 $c-bg-general: $c-darkbnb
