add global bot settings view to web interface

--- a/web/src/app/components/header/header.component.html
+++ b/web/src/app/components/header/header.component.html
@@ -25,3 +25,10 @@
         <p>logout</p>
     </div>
 </ng-template>
+
+<ng-template #settings>
+    <div class="popup-entry">
+        <img src="/assets/settings.svg"/>
+        <p>bot settings</p>
+    </div>
+</ng-template>
