update permission calculation, add no-guild-invite to web interface

--- a/web/src/app/routes/home/home.component.sass
+++ b/web/src/app/routes/home/home.component.sass
@@ -31,3 +31,13 @@
         p
             font-size: 14px
             color: $c-font-gray
+
+
+.no-guilds
+    text-align: center
+    margin-top: 10vh
+
+    .guild-inv-container
+        width: 300px
+        background-color: $c-nqblack
+        border-radius: 5px
