--- a/web/src/app/routes/home/home.component.html
+++ b/web/src/app/routes/home/home.component.html
@@ -9,4 +9,20 @@
             </div>
         </a>
     </div>
+
+    <div *ngIf="inviteSettings" class="no-guilds">
+        <h3 class="mb-3">You are not sharing any guild with shinpuru :(</h3>
+        <div *ngIf="inviteSettings.guild">
+            <p>{{ inviteSettings.message || 'Join this guild below to get experienced with shinpuru! ;)' }}</p>
+            <div class="d-flex">
+                <a class="guild-container mx-auto" [href]="inviteSettings.invite_url" target="_blank">
+                    <img [src]="inviteSettings.guild.icon ? inviteSettings.guild.icon_url : '/assets/dc-logo.svg'"/>
+                    <div class="info-container">
+                        <h1>{{ inviteSettings.guild.name }}</h1>
+                        <p>{{ inviteSettings.guild.member_count }} members</p>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
 </div>
