--- a/web/src/app/routes/guild/guild.component.sass
+++ b/web/src/app/routes/guild/guild.component.sass
@@ -107,6 +107,11 @@
     border-radius: 5px
 
 
+.display-more-btn
+    padding: 10px 30px 10px 30px !important
+    +mx-auto
+
+
 @media only screen and (max-width: 700px)
     #user-info
         height: fit-content
