--- a/web/src/app/routes/home/home.component.html
+++ b/web/src/app/routes/home/home.component.html
@@ -2,7 +2,9 @@
     <app-spinner id="spinner-load-guilds" [started]="true"></app-spinner>
     <div class="guilds-list-container">
         <a *ngFor="let g of guilds" class="guild-container" routerLink="/guilds/{{ g.id }}">
-            <img [src]="g.icon ? g.icon_url : '/assets/dc-logo.svg'"/>
+            <div class="guild-tn">
+                <img [src]="g.icon ? g.icon_url : '/assets/dc-logo.svg'"/>
+            </div>
             <div class="info-container">
                 <h1>{{ g.name }}</h1>
                 <p>{{ g.member_count }} members</p>
