--- a/web/src/app/routes/home/home.component.sass
+++ b/web/src/app/routes/home/home.component.sass
@@ -6,10 +6,12 @@
     flex-wrap: wrap
 
 .guild-container
+    $width: 250px
+
     background-color: $c-nqblack
     width: fit-content
-    min-width: 250px
-    height: 310px
+    min-width: $width
+    height: $width + 60px
     margin: 0 20px 20px 0
     border-radius: 5px
     overflow: hidden
@@ -18,10 +20,21 @@
 
     +hover-btn
 
-    img
-        width: 250px
-        height: 250px
-        border-radius: 5px 0 0 5px
+    &:hover
+        .guild-tn
+            img
+                transform: scale(1.05)
+
+    .guild-tn
+        width: $width
+        height: $width
+        overflow: hidden
+        border-radius: 5px
+
+        img
+            width: $width
+            height: $width
+            +transition25
 
     .info-container
         padding: 10px 10px
