--- a/web/src/styles.sass
+++ b/web/src/styles.sass
@@ -116,3 +116,11 @@ select
     
 .dark-modal .close
     color: white
+
+.cbadge
+    font-size: .8rem
+    padding: 2px 10px
+    background-color: rgba(0, 0, 0, .3)
+    border-radius: 10px
+    margin: 0
+    height: fit-content
