fix kick & ban button visibilities depending on member permission [fix #67]

--- a/web/src/app/routes/guild/guild.component.html
+++ b/web/src/app/routes/guild/guild.component.html
@@ -1,5 +1,5 @@
 <div>
-    <app-spinner id="spinner-load-guild" [started]="true"></app-spinner>
+    <app-spinner *ngIf="guild && member" id="spinner-load-guild" [started]="true"></app-spinner>
     <div *ngIf="guild">
 
         <!-- HEADING -->
