--- a/web/src/app/routes/member/member.component.html
+++ b/web/src/app/routes/member/member.component.html
@@ -119,10 +119,16 @@
                 <button *ngIf="hasPermission('sp.guild.mod.report')" (click)="report()">
                     REPORT
                 </button>
-                <button *ngIf="hasPermission('sp.guild.mod.kick')" class="bg-orange" (click)="kick()">
+                <button *ngIf="
+                    hasPermission('sp.guild.mod.kick') && 
+                    (roleDiff > 0 || guild.self_member.dominance > member.dominance)
+                " class="bg-orange" (click)="kick()">
                     KICK
                 </button>
-                <button *ngIf="hasPermission('sp.guild.mod.ban')" class="bg-red" (click)="ban()">
+                <button *ngIf="
+                    hasPermission('sp.guild.mod.ban') &&
+                    roleDiff > 0 || guild.self_member.dominance > member.dominance
+                " class="bg-red" (click)="ban()">
                     BAN
                 </button>
             </div>
