fix spinner behavior

--- a/web/src/app/routes/member/member.component.html
+++ b/web/src/app/routes/member/member.component.html
@@ -61,7 +61,7 @@
 
     <!-- ------------------------------------------------------- -->
 
-    <app-spinner id="spinner-load-member" [started]="true"></app-spinner>
+    <app-spinner *ngIf="!member && !guild" id="spinner-load-member" [started]="true"></app-spinner>
     <div *ngIf="member && guild">
 
         <div id="heading-container">
