--- a/web/src/app/routes/member/member.component.html
+++ b/web/src/app/routes/member/member.component.html
@@ -121,13 +121,13 @@
                 </button>
                 <button *ngIf="
                     hasPermission('sp.guild.mod.kick') && 
-                    (roleDiff > 0 || guild.self_member.dominance > member.dominance)
+                    roleDiff > 0 && guild.self_member.dominance >= member.dominance
                 " class="bg-orange" (click)="kick()">
                     KICK
                 </button>
                 <button *ngIf="
                     hasPermission('sp.guild.mod.ban') &&
-                    roleDiff > 0 || guild.self_member.dominance > member.dominance
+                    roleDiff > 0 && guild.self_member.dominance >= member.dominance
                 " class="bg-red" (click)="ban()">
                     BAN
                 </button>
