add 'invisible' as allowed presence status

--- a/web/src/app/routes/settings/settings.component.html
+++ b/web/src/app/routes/settings/settings.component.html
@@ -17,6 +17,7 @@
                             <option ngValue="online">online</option>
                             <option ngValue="dnd">do not disturb</option>
                             <option ngValue="idle">idle</option>
+                            <option ngValue="invisible">invisible</option>
                         </select>
                     </tr>
                 </tbody>
