--- a/web/src/styles.sass
+++ b/web/src/styles.sass
@@ -35,6 +35,9 @@ button
         background-color: darken($c-blurple, 5)
         transform: translateY(-2px)
 
+    &:disabled
+      background-color: desaturate($c-blurple, 20)
+
 hr
     border-top: 3px solid $c-nqblack !important
 
