--- a/web/src/app/routes/member/member.component.html
+++ b/web/src/app/routes/member/member.component.html
@@ -122,15 +122,15 @@
                 </button>
                 <button *ngIf="
                     hasPermission('sp.guild.mod.kick') && 
-                    (!roleDiff || roleDiff > 0) && 
-                    guild.self_member.dominance >= member.dominance
+                    ((!roleDiff || roleDiff > 0) || 
+                    guild.self_member.dominance >= member.dominance)
                 " class="bg-orange" (click)="kick()">
                     KICK
                 </button>
                 <button *ngIf="
                     hasPermission('sp.guild.mod.kick') && 
-                    (!roleDiff || roleDiff > 0) && 
-                    guild.self_member.dominance >= member.dominance
+                    ((!roleDiff || roleDiff > 0) || 
+                    guild.self_member.dominance >= member.dominance)
                 " class="bg-red" (click)="ban()">
                     BAN
                 </button>
