--- a/web/src/app/components/spinnerButton/spinnerButton.component.html
+++ b/web/src/app/components/spinnerButton/spinnerButton.component.html
@@ -1,6 +1,6 @@
 <div>
-    <button (click)="onClick($event)" [disabled]="_loading">
-        <app-spinner *ngIf="_loading; else content" [started]="true" [small]="true"></app-spinner>
+    <button (click)="onClick($event)" [disabled]="loading">
+        <app-spinner *ngIf="loading; else content" [started]="true" [small]="true"></app-spinner>
         <ng-template #content>
             <ng-content></ng-content>
         </ng-template>
