--- a/web/src/app/components/header/header.component.html
+++ b/web/src/app/components/header/header.component.html
@@ -32,3 +32,10 @@
         <p>bot settings</p>
     </div>
 </ng-template>
+
+<ng-template #sysinfo>
+    <div class="popup-entry">
+        <img src="/assets/info.svg"/>
+        <p>info</p>
+    </div>
+</ng-template>
