optimized web interface member view

--- a/web/src/app/routes/guild/guild.component.html
+++ b/web/src/app/routes/guild/guild.component.html
@@ -29,21 +29,21 @@
         <div class="d-flex">
             <app-spoiler [(ngModel)]="guildToggle">
                 <h4 class="mx-3">GUILD MEMBERS</h4>
-                <p class="cbadge">{{ guildToggle ? (members?.length + ' / ' + guild.member_count) : guild.member_count }}</p>
+                <p class="cbadge">{{ guildToggle ? (membersDisplayed?.length + ' / ' + guild.member_count) : guild.member_count }}</p>
             </app-spoiler>
         </div>
         <div *ngIf="guildToggle">
             <input type="text" class="my-2" placeholder="search member" (input)="searchInput($event)"/>
             <div id="users-container" class="d-flex overflow-wrap mt-3">
-                <app-member *ngFor="let m of members" [member]="m" [roles]="guild.roles" routerLink="/guilds/{{guild.id}}/{{m.user.id}}"></app-member>
+                <app-member *ngFor="let m of membersDisplayed" [member]="m" [roles]="guild.roles" routerLink="/guilds/{{guild.id}}/{{m.user.id}}"></app-member>
             </div>
             <i *ngIf="members.length == 0 && isSearchInput">No results.</i>
             <div class="d-flex">
                 <app-spinner-button 
                     *ngIf="guild.member_count > MAX_SHOWN_USERS && 
-                           members.length < guild.member_count && 
+                           membersDisplayed.length < guild.member_count && 
                            !isSearchInput" 
-                    (click)="displayMoreUsers()" 
+                    (click)="displayMoreMembers()" 
                     class="display-more-btn"
                     [(ngModel)]="memberDisplayMoreLoading"
                 >
