--- a/web/src/app/components/spinnerButton/spinnerButton.component.html
+++ b/web/src/app/components/spinnerButton/spinnerButton.component.html
@@ -1,5 +1,5 @@
 <div>
-    <button (click)="onClick($event)" [disabled]="loading">
+    <button [disabled]="loading">
         <app-spinner *ngIf="loading; else content" [started]="true" [small]="true"></app-spinner>
         <ng-template #content>
             <ng-content></ng-content>
