update from ng7 -> ng9 and fix sass errors

--- a/web/src/sass/mixins.sass
+++ b/web/src/sass/mixins.sass
@@ -18,4 +18,4 @@
 
     &:hover
         transform: scale($scale)
-        box-shadow: 0px $shadowlen 0px 0px rgba(0,0,0,0.3);
+        box-shadow: 0px $shadowlen 0px 0px rgba(0,0,0,0.3)
