--- a/web/src/styles.sass
+++ b/web/src/styles.sass
@@ -85,7 +85,7 @@ select
     height: fit-content
     border-radius: 5px
     margin: 0
-    font-family: 'Roboto Mono', monospace;
+    font-family: 'Roboto Mono', monospace
     font-size: .7em
 
 .overflow-wrap
