--- a/web/src/app/components/header/header.component.sass
+++ b/web/src/app/components/header/header.component.sass
@@ -43,11 +43,11 @@
         margin-left: auto
 
         .logout-btn
-            font-size: 12px;
-            margin-right: 10px;
-            border-radius: 3px;
+            font-size: 12px
+            margin-right: 10px
+            border-radius: 3px
             background-color: rgba(0, 0, 0, .4)
-            padding: 5px 10px;
+            padding: 5px 10px
             cursor: pointer
             +my-auto
 
