api token frontend implementation [#114]

--- a/web/src/app/components/header/header.component.html
+++ b/web/src/app/components/header/header.component.html
@@ -39,3 +39,10 @@
         <p>info</p>
     </div>
 </ng-template>
+
+<ng-template #apitoken>
+    <div class="popup-entry">
+        <img src="/assets/key.svg"/>
+        <p>api token</p>
+    </div>
+</ng-template>
