fix lastAccess naming of Token API model

--- a/web/src/app/routes/apitoken/apitoken.component.html
+++ b/web/src/app/routes/apitoken/apitoken.component.html
@@ -37,7 +37,7 @@
                 </tr>
                 <tr>
                     <th>Last Access</th>
-                    <td>{{ dateFormat(token.lastAccess) }}</td>
+                    <td>{{ dateFormat(token.last_access) }}</td>
                 </tr>
                 <tr>
                     <th>Hits</th>
