add cookie information on login [fix #121]

--- a/web/src/app/routes/login/login.component.html
+++ b/web/src/app/routes/login/login.component.html
@@ -2,6 +2,10 @@
     <div class="container-fluid">
         <h1>LOGIN</h1>
         <p>You need to be logged in to use shinpurus web interface.</p>
+        <div class="warning">
+            <img src="/assets/warning.svg" />
+            <span>This page is using cookies for maintaining user sessions after logging in.</span>
+        </div>
         <a href="/_/loginwithdiscord"><button>LOG IN WITH YOUR DISCORD ACCOUNT</button></a>
     </div>
 </div>
