--- a/web/src/app/routes/login/login.component.sass
+++ b/web/src/app/routes/login/login.component.sass
@@ -3,5 +3,21 @@
     .container-fluid
         margin-top: 10vh
 
-    div *
+    > div > *
         margin-top: 30px
+
+
+.warning
+    display: flex
+    align-items: cenetr
+    justify-content: center
+    background-color: #fdd83554
+    border-radius: 5px
+    padding: 10px 20px
+    width: fit-content
+    margin: 0 auto 30px auto
+
+    img
+        margin-right: 10px
+        width: 25px
+        height: 25px
