update API token web page

--- a/web/src/app/routes/apitoken/apitoken.component.sass
+++ b/web/src/app/routes/apitoken/apitoken.component.sass
@@ -16,9 +16,9 @@ a
     font-size: 14px
     background-color: #00000054
     padding: 5px
-    width: fit-content
     margin-top: 10px
     border-radius: 5px
+    max-width: 100%
 
 .warning
     background-color: #b71c1c
