--- a/web/src/app/routes/apitoken/apitoken.component.html
+++ b/web/src/app/routes/apitoken/apitoken.component.html
@@ -1,6 +1,10 @@
 <div>
-    <div class="d-flex mb-3">
+    <div class="mb-4">
         <h1>API TOKEN</h1>
+        <p class="mt-3">
+            <a href="https://github.com/zekroTJA/shinpuru/wiki/REST-API-Docs" target="_blank">
+                <strong>Here</strong>
+            </a> you can find the API documentation of shinpuru.</p>
     </div>
 
     <app-spinner *ngIf="!token && !notGenerated" [started]="true"></app-spinner>
