add documentation entry in dropdown

--- a/web/src/app/components/header/header.component.html
+++ b/web/src/app/components/header/header.component.html
@@ -46,3 +46,10 @@
         <p>api token</p>
     </div>
 </ng-template>
+
+<ng-template #documentation>
+    <div class="popup-entry">
+        <img src="/assets/documentation.svg"/>
+        <p>docs</p>
+    </div>
+</ng-template>
