moved /sysinfo to /info and add general resource links

--- a/web/src/app/routes/info/info.component.html
+++ b/web/src/app/routes/info/info.component.html
@@ -1,5 +1,16 @@
 <div>
-    <div class="d-flex mb-3">
+    <h1 class="mb-3">ABOUT</h1>
+    <ul>
+        <li><a href="https://github.com/zekroTJA/shinpuru" target="_blank">GitHub Repository</a></li>
+        <li><a href="https://github.com/zekroTJA/shinpuru/blob/master/LICENCE" target="_blank">Licence</a></li>
+        <li><a href="https://github.com/zekroTJA/shinpuru#third-party-dependencies" target="_blank">3rd Party Dependencies and Credits</a></li>
+        <li><a href="https://github.com/zekroTJA/shinpuru/wiki" target="_blank">Wiki</a></li>
+        <li><a href="https://github.com/zekroTJA/shinpuru/blob/master/bughunters.md" target="_blank">Bug Hunters</a></li>
+        <li><a href="https://github.com/zekroTJA/shinpuru/projects" target="_blank">Development Roadmaps</a></li>
+        <li><a href="https://github.com/zekroTJA/shinpuru/issues" target="_blank">Issue Tracker</a></li>
+    </ul>
+
+    <div class="d-flex mb-3 mt-4">
         <h1>SYSTEM INFORMATION</h1>
         <app-slider class="ml-auto mr-3" (switch)="onARClick($event)">Auto-Refresh</app-slider>
     </div>
