--- a/web/src/app/routes/info/info.component.sass
+++ b/web/src/app/routes/info/info.component.sass
@@ -4,6 +4,10 @@
 table, tbody, tr, th
     border: solid 1px #6c757d
 
+a
+    color: cyan !important
+    text-decoration: underline !important
+    
 .heading 
     text-align: center
     font-family: 'Montserrat', sans-serif
