--- a/web/src/app/routes/settings/settings.component.html
+++ b/web/src/app/routes/settings/settings.component.html
@@ -1,4 +1,6 @@
 <div>
+    <h1 class="mb-4">GLOBAL BOT SETTINGS</h1>
+
     <h3>PRESENCE</h3>
     <app-spinner *ngIf="!presence; else presenceTemp" [started]="true"></app-spinner>
     <ng-template #presenceTemp>
