--- a/web/src/sass/vars.sass
+++ b/web/src/sass/vars.sass
@@ -6,6 +6,7 @@ $c-nqblack: #23272A
 $c-red:     #e53935
 $c-orange:  #F57C00
 $c-green:   #43A047
+$c-lime:    #8BC34A
 
 $c-bg-general: $c-darkbnb
 $c-font-general: white
