--- a/web/src/app/routes/guild/guild.component.sass
+++ b/web/src/app/routes/guild/guild.component.sass
@@ -134,6 +134,39 @@
         background-color: $c-green
 
 
+.backups-container
+    width: fit-content
+
+    > *
+        margin-bottom: 10px
+        &:last-child
+            margin-bottom: 0
+            background-color: rgba($c-blurple, 0.5)
+
+
+.backups-entry
+    display: flex
+    background-color: rgba(black, 0.15)
+    padding: 5px 10px
+    border-radius: 5px
+    align-items: center
+    justify-content: space-between
+
+    .number
+        background-color: rgba(black, 0.25)
+        padding: 0px 10px
+        border-radius: 5px
+
+    > button
+        padding: 0px 10px
+        background-color: #00000069
+
+    > *
+        margin-right: 10px
+        &:last-child
+            margin-right: 0
+
+
 @media only screen and (max-width: 700px)
     #user-info
         height: fit-content
