--- a/web/src/styles.sass
+++ b/web/src/styles.sass
@@ -110,7 +110,7 @@ select
     background-color: transparentize($c-red, .4)
 
 .link
-    color: $c-blurple !important
+    color: cyan !important
     text-decoration: underline !important
 
 .dark-modal .modal-content
