--- a/web/src/app/routes/home/home.component.html
+++ b/web/src/app/routes/home/home.component.html
@@ -18,7 +18,9 @@
             <p>{{ inviteSettings.message || 'Join this guild below to get experienced with shinpuru! ;)' }}</p>
             <div class="d-flex">
                 <a class="guild-container mx-auto" [href]="inviteSettings.invite_url" target="_blank">
-                    <img [src]="inviteSettings.guild.icon ? inviteSettings.guild.icon_url : '/assets/dc-logo.svg'"/>
+                    <div class="guild-tn">
+                        <img [src]="inviteSettings.guild.icon ? inviteSettings.guild.icon_url : '/assets/dc-logo.svg'"/>
+                    </div>
                     <div class="info-container">
                         <h1>{{ inviteSettings.guild.name }}</h1>
                         <p>{{ inviteSettings.guild.member_count }} members</p>
